@@ -12,6 +12,7 @@
 * Formatters will no longer be passed File objects. They must use ensure_io, ensure_file or ensure_dir. (Aslak Hellesøy)
 
 === Bugfixes
+* Exception messages are properly escaped in the HTML report. (Aslak Hellesøy)
 * Improved UTF-8 support for Windows. (Aslak Hellesøy)
 * Make #element_at / #table_at work on Webrat 0.6.0. This is now deprecated it in favour of #tableish from the cucumber-rails gem. (Aslak Hellesøy)
 * JUnit formatter not handling multiline table steps inside Scenario Outlines (#538 Matt Wynne)
